# polux24_loc

./: MESSAGE POUR KAM SANS TÉLÉPHONE  Makefile  README.md  cristaux kantik.py  fichier pour modif kam.py  note_adri  pyproject.toml
.trash/: 10 01 25  TF-IDF.py  carteGEO.py  console tampon.py  data_wrapper.py  gazeteer_tampon.py  misc_tool_tampon  readme.md  request kam 11 01 25 23h55  tampon_Flair.py  tampon_STANZA.py  tampon_spacy.py
builder/: corpus_builder.py
doc/: documentation.md  generate_doc.py
env/: __init__.py  environ_vars.py  path.py
src/: extractions.py  get_text.py  locs_extraction.py  text_extraction.py
src/polux_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/polux_pipeline/commands/: __init__.py  base.py  fetch.py  ner.py
src/polux_pipeline/ner/: rule_based.py
src/polux_pipeline/utils/: files.py  logging.py
src/utils/: __init__.py  files_manager.py  get_locs.py  get_text.py  hashing.py  misc.py  misc_tools.py  path_manager.py  truc
tests/: test_pipeline.py
utils/: __init__.py  base.py  data_wrapper.py  db_wrapper.py  document.py  loc_entity.py  loc_extractor.py  locs_extractor.py  new_logger.py  poubelle  poubelle.py  tampon_Flair.py  tampon_STANZA.py  tampon_spacy.py  text_extractor.py
